--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "clsx": "^1.1.1",
+    "eth-sig-util": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
